2011-02-12  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* man/runscript.1, man/minicom.1: Fixes by John Bradshaw

2011-02-07  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c: Avoid redraw of status line in Offline mode when
	  nothing changed.

2011-02-05  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Do not lose line wrap setting over terminal resizes.

	* src/main.c: Simplify status line update, also makes status
	  messages display the amount of time they are actually supposed
	  to display.

2011-01-29  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: Change version to 2.5.

2011-01-24  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/script.c: Make word handling more dynamic, and thus allowing
	  words > 89 chars. Reported via Debian BTS #610511.

	* po/da.po: Update from translation team.

2011-01-16  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* NEWS: Update.

	* ChangeLog: Convert to UTF8 encoding.

	* man/ascii-xfr.1: Fix typos, Thanks Jan Görig,
	  https://bugzilla.redhat.com/show_bug.cgi?id=669098

	* src/rwconf.c: Fix config file parsing bug, Thanks Jan Görig,
	  https://bugzilla.redhat.com/show_bug.cgi?id=669406

2011-01-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/da.po: Update from translation team.

2011-01-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/da.po: Update from translation team.

2010-12-12  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/dial.c: For macros, add \g<script> to launch runscript.

	* src/window.c: _attron(): fix bold with inverse mode, do not handle
	  prettiness

	* src/vt100.c: state2(): order list in switch for readability.

2010-10-26  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/ascii-xfr.c: check_answer: Cleanup.
	  Thanks Kjell M. Myksvoll.

	* src/ascii-xfr.c: lineout: change to use explicit length info
	  instead of strlen, makes storing data with included '\0' work.
	  Thanks Kjell M. Myksvoll.
